[gd_scene load_steps=9 format=2]

[ext_resource path="res://characters/Character.gd" type="Script" id=1]
[ext_resource path="res://characters/shared/shadow.png" type="Texture" id=2]
[ext_resource path="res://characters/player/buddy_green.png" type="Texture" id=3]
[ext_resource path="res://characters/DebugCharacter.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]

resource_name = "_setup"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=2]

resource_name = "idle"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=3]

resource_name = "take_damage"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.390557, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 19.9141, 16 )
_sections_unfolded = [ "Resource" ]

[node name="Character" type="KinematicBody2D" groups=[
"character",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "collision" ]
weapon_scene_path = "res://characters/weapons/spear/Spear.tscn"
max_health = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/_setup = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/take_damage = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Shadow" type="Sprite" parent="."]

scale = Vector2( 0.546225, 0.546225 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Body" type="Sprite" parent="."]

scale = Vector2( 0.446435, 0.446435 )
texture = ExtResource( 3 )
offset = Vector2( 0, -69 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

position = Vector2( 0, -15.8886 )
shape = SubResource( 4 )

[node name="WeaponSpawnPoint" type="Node2D" parent="."]

position = Vector2( 0, -30 )
_sections_unfolded = [ "Transform" ]

[node name="WeaponAnchorPoint" type="Node2D" parent="WeaponSpawnPoint"]

_sections_unfolded = [ "Transform" ]

[node name="DisplayDebugInfo" type="Label" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -46.0
margin_top = -84.0
margin_right = 47.0
margin_bottom = -68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Debug info"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 4 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


